Final push for assignment, added catagory system using hashmaps and created a easier startup with StartApp.run. This will be the final commit for this assignment